--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,10 @@
     -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>dreck</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScriSpt to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
